# shoeset

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build-npm.sh  test.sh
site/: index.html  index.js  package-lock.json  package.json  test-nodejs.mjs
src/: internal.rs  lib.rs
src/internal/: buffer.rs  decode.rs  encoded_header.rs  header.rs  nid.rs  read_utils.rs
tests/: browser.rs  foobar.7z  tests.rs
